<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Atrix Settings</string>
    <string name="main_title">Motorola Atrix Settings</string>
    <string name="navigation_configuration">Fingerprint sensor navigation</string>
    <string name="database_administration">Manage fingerprints</string>
    <string name="hdmi_audio_title">HDMI Audio</string>
    <string name="hdmi_audio_summary_on">Using HDMI for audio output</string>
    <string name="hdmi_audio_summary_off">Using speaker for audio output</string>
    <string name="storage_switch_title">Use external storage</string>
    <string name="storage_switch_summary_off">Using expanded internal storage for apps and media</string>
    <string name="storage_switch_summary_on">Using SD Card for apps and media</string>
    <string name="storage_switch_unavailable">This device doesn\'t have expanded internal storage</string>
    <string name="category_audiovideo">Audio &amp; Video</string>
    <string name="category_fingerprint">Fingerprint</string>
    <string name="category_storage">Storage</string>
    <string name="hwa_settings">Hardware Acceleration</string>
</resources>
